--- a/3-ansible/ansible/upgrade.yaml
+++ b/3-ansible/ansible/upgrade.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
      - name: Update and upgrade apt packages
-       become: true
+       become: yes
        apt:
          upgrade: yes
          update_cache: yes
